feat: v1.3.0 独立可执行分发版（H2 内嵌数据库 + jpackage 安装包）
- 数据库从 MySQL 切换为 H2 内嵌文件数据库，零配置启动
- 邮件功能改为可选（默认关闭，通过外部 config.yml 启用）
- 启动后自动打开浏览器访问首页
- 新增 build-installer.bat 一键构建 Windows 安装包（jpackage + WiX）
- 新增 schema.sql 自动建表、application-mysql.yml 开发 profile
- 新增 config-template.yml 邮件配置模板

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,14 @@
             <version>2.3.2</version>
         </dependency>
 
-        <!-- MySQL Driver -->
+        <!-- H2 内嵌数据库（默认，分发用） -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- MySQL Driver（开发用，可选） -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
